# ariyantype-soft_orig

./: .gitignore  README.md  note.md  note_260130.md.html  pyproject.toml  pyproject.toml~orig
note_260130.md_files/: RotateCookiesPage.html  app.html  faviconV2(2)  images  images(1)  images(2)  images(3)  images(4)  m=D3Zopd,ch7kFd,m0LFHd  m=Gtg4Ge  m=Gy8rfb,XgyR6c  m=HP6Sjf,ZfypCb,CJIHLd,KMhGd,FOJdve  m=OoK5v,X1kBmd  m=PR9Qj  m=RagDlc  m=attn,cdos,gwc,hsm,jsa,cEt90b,SNUn3,qddgKe,sTsDMc,dtl0hd,eHDfl,YV5bee,d,csi(1)  m=b,dpf  m=lOO0Vd,sy9e,P6sQOc  m=mcbXnd  m=ngdGXb,GcYqw,a7jQSb,WHU09c,R6T8Ed,zcbKvc,YCx75c,LqPFqc,ZA09ef,uGc0Lc,OAHOkf,mS46Ef,PsY2Nc,xOSzQd,jkJHWd,cl43Hd,Veb2cb,kJJagd,B4I0Lb  m=nqTR2b,qdHsJf,ipDJ1,TXNvVc,yonSlb,mQ0Qzd,TB3Kme,P5gZDb,JKPgvc,Hgdwff,AIvLTe  m=pRMv2d  m=sy5cl,sy5cj,sys8,syqy,syo5,sy1j7,sy1j5,sy1j8,sy10h,sy5ck,sy100,EkevXb,kN1Sic,VEbNoe,syzi,eX5ure,sy89h,sy7cw,zGLm3b,L8KGxe,sy2dt,NEW1Qc  m=sy5q9,sy5b7,sy5px,sy5pv,zouQy,sy5g9,sy5g8,zLjACb,sy9x,sy9w,YNjGDd,sy9v,IZT63,PrPYRd,sy11c,sy1ci,sy1ch,sya2,sy1cf,sy1b0,sy13c,sy138,sy133,syfa,syew,sy137,sy1ce,sy12u,sy12t,M8IzD  m=uUCgYd,nfCumd,zp3Dsd,Aoijq,gHKH2d,v48bt,fly6D,zYmgkd,a7qCn,mPWODf,vsuOFb,xE4zce,RjGxw,Oh6VO,rjz2Nb,gLbyMb,neva6b,WCuygd,Cky8Oc,W8lZxc,lT8wJc,XcytL,HA6ak  m=zcfIf,udAs2b,KHhJQ,a5f0he,RJMArf,TU7LGc,XktUkb,HHvzd,NTGAy,w74sh,dFmed
src/ariyantype/: data_extractor.py  data_manager.py  plotter.py  skill_checker.py  training_logger.py  typing_app.py  typing_main.py  typing_session.py
src/ariyantype.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ariyantype/_stack_1st_260402/: data_manager.py  revise_1st_plot_260402.md
src/ariyantype/data/: STEP-12.txt  training_date.txt
uml/: DataManager_2.puml  DataManager_3.puml  DataManager_4.puml  DataManager_5.puml  DataManager_6.puml  DataManger_1.puml  ariyantype_class_diagram.puml  class_diagram.puml  datamanager.puml  plot_1.puml  plot_2.puml  plot_3.puml  plot_ex.tex
