[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ariyantype"
version = "0.1.0"
description = "sample pip package"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Kaito Ariyoshi", email="kaituryu0411@gmail.com"}]

dependencies = [
    "matplotlib",
]

[project.scripts]
ariyantype = "ariyantype.typing_main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
